--- a/src/main/resources/templates/missionpage.html
+++ b/src/main/resources/templates/missionpage.html
@@ -21,7 +21,7 @@
             gap: 20px;
         }
         .flex-item {
-            width: 200px;
+            width: fit-content;
             height: 300px;
             background-color: lightblue;
             border: 1px solid black;
@@ -29,6 +29,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            margin-bottom: 10px;
+            flex-direction: column;
+            margin-left: 30px;
+            margin-right: 30px;
         }
     </style>
 </head>
@@ -129,13 +133,19 @@
     <hr>
 
     <div class="row">
+        <h2 style="margin-bottom: 15px; font-family: 'Noto Sans Myanmar'; font-weight: bolder; color: burlywood">Personas</h2>
         <div class="flex-container1">
             <div class="flex-item" th:each="persona : ${personas}">
-                <p th:text="${persona.name}"></p><br>
-                <p th:text="${persona.background}">Background</p><br>
+                <h3 th:text="${persona.name}"></h3><br>
+                <h5 style="color: salmon">Background</h5>
+                <p th:text="${persona.background}"></p><br>
+                <h5 style="color: salmon">Goals</h5>
                 <p th:text="${persona.goals}"></p><br>
+                <h5 style="color: salmon">Needs</h5>
                 <p th:text="${persona.needs}"> Needs</p><br>
+                <h5 style="color: salmon">Skills and Experiences</h5>
                 <p th:text="${persona.skillsAndExperiences}"></p><br>
+                <h5 style="color: salmon">Frustration</h5>
                 <p th:text="${persona.frustration}"></p>
 
             </div>
@@ -146,9 +156,11 @@
     </div>
     <hr>
     <div class ="row">
-        <div class="flex-item" th:each="student : ${students}">
-            <p th:text="${student.sid}"></p>
-            <p th:text="${student.name}"></p>
+        <h1 style="font-weight: bold; color: rebeccapurple"> Author</h1>
+        <div class="flex-item" th:each="student : ${students}" >
+            <h4 th:text="${student.name}"></h4>
+            <p>Student Id :<span th:text="${student.sid}"></span></p>
+
 
         </div>
 
