--- a/src/main/resources/templates/templates/level3SubtaskA.html
+++ b/src/main/resources/templates/templates/level3SubtaskA.html
@@ -56,6 +56,14 @@
             position: relative;
             top: 10px;
         }
+        /* Style for clicked column */
+        .blue-background {
+            background-color: lightblue;
+        }
+
+
+
+
 
 
     </style>
@@ -164,8 +172,8 @@
                                     <ul class="options">
                                         <li>
                                             <div class="input">
-                                                <label for="region">Selected Region</label>
-                                                <select id="region" name="region">
+                                                <label hidden="hidden" for="region">Selected Region</label>
+                                                <select hidden="hidden" id="region" name="region">
                                                     <option hidden="hidden" th:each="region : ${modelView.regions}" th:value="${region.name}" th:if="${!region.name.equals('Global')}" th:text="${region.name}" th:selected="${region.selected}" th:href="@{/level3SubtaskA(region=${selectedRegion})}"></option>
                                                 </select>
                                                 <input type="hidden" name="selectedCountry" th:value="${selectedCountry}">
@@ -321,34 +329,52 @@
                 <div class="" th:if = "${lengthData >0 } ">
                     <thead>
                     <tr>
-                        <th th:each="header, headerIndex : ${modelView.table.header}"  >
-                            <p th:text="${header}"></p>
-                            <a
-                                    th:href="@{/level3SubtaskA(region=${selectedRegion.name},yearPeriod=${modelView.yearPeriod}, startingYears=${#strings.listJoin(modelView.startingYears, ',')},minAverageChange=${modelView.minAverageChange},maxAverageChange=${modelView.maxAverageChange},minPopulation=${modelView.minPopulation},maxPopulation=${modelView.maxPopulation}, sortType=${nextSortType}, sortColumn=${(headerIndex.index)-1})}">
-                                <svg th:if="${headerIndex.index >0}" width="16" height="17" viewBox="0 0 16 17"
-                                     fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                            d="M8.47157 2.69526C8.34654 2.57024 8.17697 2.5 8.00016 2.5C7.82335 2.5 7.65378 2.57024 7.52876 2.69526L3.52876 6.69526C3.26841 6.95561 3.26841 7.37772 3.52876 7.63807C3.78911 7.89842 4.21122 7.89842 4.47157 7.63807L8.00016 4.10948L11.5288 7.63807C11.7891 7.89842 12.2112 7.89842 12.4716 7.63807C12.7319 7.37772 12.7319 6.95561 12.4716 6.69526L8.47157 2.69526Z"
-                                            fill="#85858A" />
-                                    <path
-                                            d="M8.47157 14.9714C8.34654 15.0964 8.17697 15.1667 8.00016 15.1667C7.82335 15.1667 7.65378 15.0964 7.52876 14.9714L3.52876 10.9714C3.26841 10.7111 3.26841 10.2889 3.52876 10.0286C3.78911 9.76825 4.21122 9.76825 4.47157 10.0286L8.00016 13.5572L11.5288 10.0286C11.7891 9.76825 12.2112 9.76825 12.4716 10.0286C12.7319 10.2889 12.7319 10.7111 12.4716 10.9714L8.47157 14.9714Z"
-                                            fill="#85858A" />
-                                </svg>
+                        <th th:if="${modelView.table.header[0].equalsIgnoreCase('rank')}" th:each="header, headerIndex : ${modelView.table.header}">
+                            <a style="text-decoration: none; color: black"  th:href="@{/level3SubtaskA(
+        region=${selectedRegion.name},
+        selectedCountry=${selectedCountry},
+        selectedString=${#arrays.toArray(selectedList)},
+        yearPeriod=${modelView.yearPeriod},
+        startingYears=${#strings.listJoin(modelView.startingYears, ',')},
+        minAverageChange=${modelView.minAverageChange},
+        maxAverageChange=${modelView.maxAverageChange},
+        minPopulation=${modelView.minPopulation},
+        maxPopulation=${modelView.maxPopulation},
+        sortType=${nextSortType},
+         sortColumn=${(headerIndex.index - 2)}
+    )}"><p th:text="${header}" >
+                            </p>
                             </a>
 
+                        </th>
+                        <th th:if="${!modelView.table.header[0].equalsIgnoreCase('rank')}" th:each="header, headerIndex : ${modelView.table.header}">
+                            <a style="text-decoration: none; color: black"  th:href="@{/level3SubtaskA(
+        region=${selectedRegion.name},
+        selectedCountry=${selectedCountry},
+        selectedString=${#arrays.toArray(selectedList)},
+        yearPeriod=${modelView.yearPeriod},
+        startingYears=${#strings.listJoin(modelView.startingYears, ',')},
+        minAverageChange=${modelView.minAverageChange},
+        maxAverageChange=${modelView.maxAverageChange},
+        minPopulation=${modelView.minPopulation},
+        maxPopulation=${modelView.maxPopulation},
+        sortType=${nextSortType},
+         sortColumn=${(headerIndex.index - 1)}
+    )}"><p th:text="${header}">
+                            </p></a>
 
                         </th>
+
                     </tr>
                     </thead>
                     <tbody>
                     <tr  th:each=" row: ${modelView.table.data }" >
                         <td th:each=" cell,cellIndex: ${row }" >
-                    <span th:text="${cell}" >
+                    <span    th:text="${cell}" > </span>
 
-                        </span>
                         </td>
 
-                        <td>
+
 
 
                     </tr>
