--- a/src/main/resources/templates/templates/level3SubtaskB.html
+++ b/src/main/resources/templates/templates/level3SubtaskB.html
@@ -101,7 +101,7 @@
             </div>
             <div class="three">
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    Fitures List
+                    Features List
                 </button>
 
                 <!-- Modal -->
