--- a/src/main/resources/templates/templates/landingpage.html
+++ b/src/main/resources/templates/templates/landingpage.html
@@ -234,8 +234,7 @@
                                 Deep Data
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/level3SubtaskA">SingleRegion</a></li>
-                                <li><a class="dropdown-item" href="/level3SubtaskA/multiple">MultipleRegion</a></li>
+                                <li><a class="dropdown-item" href="/level3SubtaskA">SubtaskA</a></li>
                                 <li><a class="dropdown-item" href="/level3SubtaskB?region=Country">SubtaskB</a></li>
                             </ul>
                         </li>
